[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/Montserrat-Bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/Chrono.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/PuDeTemps.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/HS.wav" type="AudioStream" id=4]
[ext_resource path="res://scripts/SpinBoxReleaseFocus.gd" type="Script" id=5]

[sub_resource type="Theme" id=4]
default_font = ExtResource( 1 )

[sub_resource type="Theme" id=5]
default_font = ExtResource( 1 )

[node name="Chrono" type="Panel"]
anchor_right = 1.0
anchor_bottom = 0.223438
margin_bottom = 10.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Time" type="HBoxContainer" parent="Container"]
margin_right = 300.0
margin_bottom = 51.0
rect_min_size = Vector2( 0, 40 )

[node name="Minutes" type="SpinBox" parent="Container/Time"]
margin_right = 148.0
margin_bottom = 51.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 4 )
max_value = 60.0
value = 1.0
align = 2
suffix = "m"
script = ExtResource( 5 )

[node name="Seconds" type="SpinBox" parent="Container/Time"]
margin_left = 152.0
margin_right = 300.0
margin_bottom = 51.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 5 )
max_value = 59.0
value = 30.0
align = 2
suffix = "s"
script = ExtResource( 5 )

[node name="ProgressBar" type="ProgressBar" parent="Container"]
margin_top = 55.0
margin_right = 300.0
margin_bottom = 95.0
rect_min_size = Vector2( 0, 40 )
step = 0.001
rounded = true
percent_visible = false

[node name="TimeLeft" type="Label" parent="Container/ProgressBar"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -12.0
margin_right = 32.0
margin_bottom = 2.0
text = "00:00"
align = 1

[node name="Buttons" type="HBoxContainer" parent="Container"]
margin_top = 99.0
margin_right = 300.0
margin_bottom = 139.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="StartPause" type="Button" parent="Container/Buttons"]
margin_right = 97.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
text = "Start"

[node name="Stop" type="Button" parent="Container/Buttons"]
margin_left = 101.0
margin_right = 198.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
text = "Stop"

[node name="HS" type="Button" parent="Container/Buttons"]
margin_left = 202.0
margin_right = 300.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "HS"

[node name="PuDeTemps" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "Effects"

[node name="HS" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "Effects"

[connection signal="time_out" from="." to="." method="_on_Chrono_time_out"]
[connection signal="value_changed" from="Container/Time/Minutes" to="." method="_on_Minutes_value_changed"]
[connection signal="value_changed" from="Container/Time/Seconds" to="." method="_on_Seconds_value_changed"]
[connection signal="pressed" from="Container/Buttons/StartPause" to="." method="_on_StartPause_pressed"]
[connection signal="pressed" from="Container/Buttons/Stop" to="." method="_on_Stop_pressed"]
[connection signal="pressed" from="Container/Buttons/HS" to="." method="_on_HS_pressed"]
[connection signal="finished" from="PuDeTemps" to="." method="_on_PuDeTemps_finished"]
